# rde-ros-2

./: .gitignore  404.html  CHANGELOG.md  FEATURE-ISSUE-DEBUG-SESSION-CONTEXT-MCP-TOOLS.md  IMPLEMENTATION_COMPLETE.md  INVESTIGATION-SUMMARY.md  ModelContextProtocol.html  PR-COMMENT-REQUEST-FOR-DIRECTION.md  README.md  configuration.html  debug-support.html  index.html  intellisense.html  launchdebugging.html  mkdocs.yml  openvsx.html  package-lock.json  package.json  pixi.html  pytest.ini  search.html  test-explorer.html  troubleshooting.html  tsconfig.json  tutorials.html  usage.html
.cursor/: mcp.json
.github/: copilot-instructions.md
.github/workflows/: release.yml  release_open.yaml  workflow.yml
assets/prompts/: ros-install-troubleshooting.md
assets/scripts/: requirements.txt  ros2_launch_dumper.py  server.py
docs/: IMPLEMENTATION_SCREENSHOT.md  ModelContextProtocol.md  QUICK_START_LAUNCH_TREE.md  README-LAUNCH-TREE.md  configuration.md  cursor-detection.md  debug-support.md  index.md  installation.md  intellisense.md  launch-tree-architecture.md  launchdebugging.md  openvsx.md  pixi.md  rust-support.md  snippets.md  test-explorer.md  topic-monitor.md  troubleshooting.md  tutorials.md  usage.md
docs/feature-proposals/: README.md  debug-session-context-mcp-tools.md  scenario-implementations-detailed.md
docs/proposals/: README.md  enhanced-intellisense-path-discovery.md
languages/syntaxes/: ROS Interface.tmLanguage.json
media/walkthroughs/: ai-features.md  commands-and-features.md  getting-started.md  install-ros-linux.md  install-ros-pixi.md
samples/: .env.sample  README.md  launch.json.example  test_detail.xml
samples/cpp/src/rde_cpp/: CMakeLists.txt  README.md  package.xml
samples/cpp/src/rde_cpp/include/rde_cpp/: rde_publisher.hpp  rde_subscriber.hpp
samples/cpp/src/rde_cpp/launch/: rde_demo.launch.py  rde_publisher.launch.py
samples/cpp/src/rde_cpp/src/: rde_publisher.cpp  rde_subscriber.cpp
samples/cpp/src/rde_cpp/test/: test_publisher.cpp  test_publisher.test.launch.py  test_subscriber.cpp  test_subscriber.test.launch.py
samples/launch_examples/: CMakeLists.txt  README.md  package.xml
samples/launch_examples/launch/: included_by_python.launch.xml  test_attributes_order.launch  test_launch.py  test_multiple_includes.launch.xml  test_python_includes.launch.py  test_with_includes.launch
samples/launch_examples/test/: test_launch_files.py
samples/lib_without_ament/: CMakeLists.txt  README.md  package.xml
samples/lib_without_ament/cmake/: rde_lib_without_amentConfig.cmake.in
samples/lib_without_ament/include/rde_lib_without_ament/: example.hpp
samples/lib_without_ament/src/: example.cpp
samples/lib_without_ament/test/: test_example.cpp
samples/lifecycle_cpp/: CMakeLists.txt  README.md  package.xml
samples/lifecycle_cpp/include/: rde_lifecycle_cpp.hpp
samples/lifecycle_cpp/launch/: rde_lifecycle_cpp.launch.py
samples/lifecycle_cpp/src/: main.cpp
samples/lifecycle_cpp/test/: test_lifecycle_node.cpp  test_lifecycle_node.test.launch.py
samples/lifecycle_py/test/: __init__.py  test_lifecycle_node.py  test_lifecycle_node.test.launch.py
samples/msg_interfaces/: CMakeLists.txt  README.md  package.xml
samples/msg_interfaces/action/: MoveToGoal.action
samples/msg_interfaces/msg/: BasicTypes.msg  ComplexMessage.msg  NavigationGoal.msg  RobotStatus.msg  SensorData.msg
samples/msg_interfaces/srv/: CalculateSum.srv  GetRobotInfo.srv
samples/msg_interfaces/test/: test_interfaces.py
samples/rust/src/rde_rust/: Cargo.toml  README.md  package.xml
samples/rust/src/rde_rust/launch/: minimal_pub_sub.launch.py
samples/rust/src/rde_rust/src/: minimal_publisher.rs  minimal_subscriber.rs
samples/test/: README.md
samples/use_lib_without_ament/: CMakeLists.txt  README.md  package.xml
samples/use_lib_without_ament/src/: main.cpp
samples/use_lib_without_ament/test/: test_library_integration.cpp
scripts/: build-cursor.js  build-openvsx.js
search/: search_index.json
snippets/: cpp.json  launch-py.json  launch-xml.json  python.json
spec/: README.md
spec/launch-tree-viewer/: INDEX-LAUNCH-TREE-PROPOSAL.md  LAUNCH_TREE_VIEWER_PROPOSAL.md  PROPOSAL_SUMMARY.txt  launch-tree-comparison.md  launch-tree-mockups.md  launch-tree-technical-guide.md
specs/: DebugMCP-Integration-Investigation.md  FEATURE-ISSUE-DEBUG-SESSION-CONTEXT-MCP-TOOLS.md  INVESTIGATION-SUMMARY.md  PR-COMMENT-REQUEST-FOR-DIRECTION.md
specs/feature-proposals/: README.md  debug-session-context-mcp-tools.md  debugmcp-integration-layer.md  scenario-implementations-detailed.md
src/: extension.ts  mcp.ts  ros2-debug-mcp.ts  telemetry-helper.ts  vscode-utils.ts
src/build-tool/: build-tool.ts  colcon-utils.ts  colcon.ts  package-decorator.ts  ros-shell.ts
src/debugger/: debug-state-tracker.ts  manager.ts  requests.ts  utils.ts
src/ros/: build-env-utils.ts  install-ros.ts  launch-link-provider.ts  ros-msg-providers.ts  ros.ts  rust-utils.ts  utils.ts
src/ros/common/: unknown-ros.ts
src/ros/launch-tree/: README.md  launch-parser.ts  launch-tree-item.ts  launch-tree-provider.ts  types.ts
src/ros/ros2/: daemon.ts  lifecycle.ts  ros2-monitor.ts  ros2.ts  (+3 more)
src/test-provider/: ros-test-provider.ts  ros-test-runner.ts  test-discovery-utils.ts
test/: .env.example  .env.test  README.md  runTest.ts  test_launch_dumper.py  test_launch_dumper_unit.py
test/launch/: demo_links.launch  example_target.launch.xml  simple_lifecycle_launch.py  test_basic_lifecycle_launch.py  test_events_launch.py  test_lifecycle_launch.py  test_lifecycle_simple.py  test_mixed_nodes.launch.py  test_python_includes.launch.py
test/suite/: build-env-utils.test.ts  colcon-utils.test.ts  cursor-detection.test.ts  debug-state-tracker.test.ts  envFile.test.ts  index.ts  install-ros.test.ts  launch-dumper.test.ts  launch-link-provider.test.ts  launch.test.ts  mcp-startup.test.ts  pixi.test.ts  ros-msg-providers.test.ts  rust-utils.test.ts  task-definitions.test.ts  test-provider.test.ts  vscode-rust-utils.test.ts  vscode-utils.test.ts  welcome-screen.test.ts  workspace-boundary.test.ts
(+30 files in other folders)
