<?xml version="1.0"?>
<package format="3">
  <name>rde_use_lib_without_ament</name>
  <version>0.1.0</version>
  <description>An ament_cmake package that use rde_lib_without_ament</description>
  <maintainer email="developer@example.com">ROS 2 Developer</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rde_lib_without_ament</depend>
  <depend>rclcpp</depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
